--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -27,4 +27,6 @@
 @import './cmps/rating.scss';
 @import './cmps/login-signup.scss';
 @import './cmps/user-nav.scss';
+@import './cmps/carusel.scss';
+
 
