added order service and store

--- a/src/assets/styles/cmps/user-nav.scss
+++ b/src/assets/styles/cmps/user-nav.scss
@@ -1,8 +1,7 @@
 .user-nav{
-    position: absolute;
+    position: fixed;
     top: 77px;
     right: 0;
-    margin-inline-end: 9rem;
     box-shadow: $boxShadow;
     width: 240px;
     background-color: white;
