--- a/src/assets/styles/cmps/stay-amenities.scss
+++ b/src/assets/styles/cmps/stay-amenities.scss
@@ -1,20 +1,30 @@
 .stay-amenities {
   padding: 48px 0;
   color: $clr-black;
+
   h1 {
     font-size: 22px;
     margin-bottom: 24px;
   }
+
   .amenities-list {
     height: 250px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     list-style-type: none;
-    & > * {
+
+    &>* {
       padding-bottom: 20px;
     }
   }
+
+  .amenities-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
   .show-all {
     font-size: 16px;
     padding: 13px 23px;
@@ -22,6 +32,7 @@
     border-radius: 8px;
     text-align: center;
     border: 1px solid $clr-black;
+
     &:hover {
       cursor: pointer;
       background-color: #f7f7f7;
