fixed layout and photos grid

--- a/src/assets/styles/cmps/order-section.scss
+++ b/src/assets/styles/cmps/order-section.scss
@@ -47,7 +47,7 @@
 .date-picker {
     display: flex;
     justify-content: space-between;
-
+    padding: 1rem;
     .in {
         width: 50%;
     }
