--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,7 +1,12 @@
 .main-layout{
     margin: 0 auto;
     max-width: var(--layoutWidth);
-    padding: 0 5rem 0 5rem;
+    padding: 0 80px 0 80px;
+}
+@media (max-width: 1127px) {
+    .main-layout{
+        padding: 0 40px 0 40px;
+    }
 }
 
 // .main-layout {
