--- a/src/assets/styles/cmps/stay-preview.scss
+++ b/src/assets/styles/cmps/stay-preview.scss
@@ -1,21 +1,17 @@
 .stay-preview {
     font-family: 'cereal-light';
-    height: 385px;
 
     img {
         cursor: pointer;
         border-radius: 15px;
-        height: 280px;
-        margin-block-end: 0.7rem;
-        aspect-ratio: 1/0.1;
+        aspect-ratio: 1/1;
     }
 
     .preview-title {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin-top: 10px;
-
+        margin-block-start: 0.8rem;
         h1 {
             font-size: 0.9rem;
             letter-spacing: 0.8px;
@@ -41,7 +37,6 @@
 }
 
 .swiper {
-    height: 280px;
     background: rgb(255, 255, 255);
     border-radius: 15px;
 }
