--- a/src/assets/styles/cmps/stay-preview.scss
+++ b/src/assets/styles/cmps/stay-preview.scss
@@ -29,6 +29,9 @@
 
     .preview-price {
         margin-block-start: 0.5rem;
+        p{
+            font-size: 0.9rem;
+        }
 
         span {
             font-family: 'cereal-medium';
