--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -47,6 +47,7 @@
                 display: flex;
                 align-items: center;
                 color: $clr-grey;
+                font-size: 0.9rem;
             }
             .left, .middle, .right{
                 div{
