--- a/src/assets/styles/cmps/carusel.scss
+++ b/src/assets/styles/cmps/carusel.scss
@@ -31,7 +31,7 @@
 }
 
 .carusel-filter-main {
-    max-width: 100%;
+    max-width: 1550px;
     display: flex;
     align-items: center;
     .swiper-button-next {
