--- a/src/assets/styles/cmps/stay-preview.scss
+++ b/src/assets/styles/cmps/stay-preview.scss
@@ -34,7 +34,7 @@
         }
 
         span {
-            font-family: 'cereal-medium';
+            font-family: 'cereal-bold';
         }
     }
 }
