--- a/src/assets/styles/cmps/user-nav.scss
+++ b/src/assets/styles/cmps/user-nav.scss
@@ -1,7 +1,7 @@
 .user-nav{
     position: fixed;
     top: 77px;
-    right: 0;
+    right: 150px;
     box-shadow: $boxShadow;
     width: 240px;
     background-color: white;
