--- a/src/assets/styles/views/trips.scss
+++ b/src/assets/styles/views/trips.scss
@@ -4,34 +4,36 @@
   }
 
   .trips-grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-    gap: 40px;
-
-    li {
-      list-style-type: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 50px;
+    li{
       display: flex;
-      gap: 20px;
+      width: 500px;
+      list-style: none;
+      img{
+        width: 200px;
+        height: 200px;
+        border-radius: 15px;
+      }
+      .trip-text-container{
+        margin-inline-start: 1rem;
+      }
     }
   }
 
-  .trip-img-container img {
-    object-fit: cover;
-    width: 100px;
-    height: 100px;
-    border-radius: 8px;
-  }
 
   h3 {
     margin-bottom: 30px;
   }
 
   h4 {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 
   p {
     color: $clr-grey;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
   }
 }
