--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -77,6 +77,7 @@
                     width: 30px;
                     margin-inline-end: 0.3rem;
                     opacity: 0.5;
+                    border-radius: 50%;
                 }
             }
         }
