--- a/src/assets/styles/cmps/user-nav.scss
+++ b/src/assets/styles/cmps/user-nav.scss
@@ -13,6 +13,10 @@
         :first-child{
             font-family: 'cereal-light';
         }
+        a{
+            text-decoration: none;
+            color: $clr-black;
+        }
         li{
             padding: 15px;
             cursor: pointer;
@@ -20,14 +24,9 @@
             &:hover{
                 background-color: rgba(219, 219, 219, 0.279);
             }
-          
         }
         hr{
             color: #00000050;
-        }
-        .host-nav-link{
-            text-decoration: none;
-            color: $clr-black;
         }
     }
 }
