amenities modal opened + trips

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -31,3 +31,4 @@
 @import './cmps/user-nav.scss';
 @import './cmps/carusel.scss';
 @import './cmps/footer.scss';
+@import './cmps/stay-amenities-modal.scss';
