--- a/src/assets/styles/views/stay-details.scss
+++ b/src/assets/styles/views/stay-details.scss
@@ -43,6 +43,8 @@
 .details-container{
     display: flex;
     justify-content: space-between;
+    border-bottom: 1px solid $clr-light-grey;
+    padding-block-end: $sectionPadding;
     .left{
         flex-basis: 60%;
     }
