added expended header

--- a/src/assets/styles/basics/base.scss
+++ b/src/assets/styles/basics/base.scss
@@ -9,9 +9,15 @@ img {
     object-fit: cover;
     width: 100%;
 }
+.overlay{
+    position: absolute;
+    z-index: -1;
+    width: 99vw;
+    height: 100vh;
+}
 
 .loader {
-    margin: 0 auto;
+    margin: 15rem auto;
     border: 5px solid #f3f3f3;
     border-top: 5px solid $clr-pink;
     border-radius: 50%;
