--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -32,3 +32,4 @@
 @import './cmps/carusel.scss';
 @import './cmps/footer.scss';
 @import './cmps/stay-amenities-modal.scss';
+@import './cmps/expended-header.scss';
