adding resevation  cmp

--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -5,7 +5,7 @@
     z-index: 5;
     border-bottom: 1px solid $clr-border;
     margin-block-end: 2rem;
-    // background-color: rgb(156, 235, 153);
+    background-color: white;
     .main-header {
         height: 80px;
         // &.opened{
