--- a/src/assets/styles/cmps/reservation-confirmation.scss
+++ b/src/assets/styles/cmps/reservation-confirmation.scss
@@ -18,7 +18,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5px;
+    margin-top: 25px;
 
 }
 
@@ -26,9 +26,9 @@
     cursor: pointer;
 }
 
-.reviews {
+.reviews-confirmation {
     display: flex;
-    margin-top: 65px;
+    margin-top: 43px;
     font-size: 1rem;
     margin-left: -4px;
     
