--- a/src/assets/styles/cmps/stay-preview.scss
+++ b/src/assets/styles/cmps/stay-preview.scss
@@ -15,8 +15,8 @@
         color: #ff385c;
         position: absolute;
         z-index: 1000;
-        right: 5%;
-        top: 5%;
+        right: 1%;
+        top:1%;
         display: none;
     }
 
@@ -30,18 +30,16 @@
         stroke-width: 1 !important;
         border: none;
         position: absolute;
-        z-index: auto;
-        right: 5%;
-        top: 5%;
-        // display: none;
+        z-index: 1;
+        right: 1%;
+        top:1%;
+        display: block;
 
-        // margin: 100px;
     }
 
     .preview-unlike-btn:hover {
         // border: none;
         // background: none;
-        cursor: ew-resize;
     }
 
  
