--- a/src/assets/styles/cmps/order-section.scss
+++ b/src/assets/styles/cmps/order-section.scss
@@ -1,12 +1,14 @@
-.order-section{
+.order-section {
     position: sticky;
     top: 115px;
+
     .order-container {
         border: 1px solid #00000015;
         border-radius: 13px;
         padding: 20px;
         width: 375px;
         box-shadow: $boxShadow;
+
         input {
             border: none;
             outline: none;
@@ -151,6 +153,7 @@
             .cell:nth-child(n + #{10 * $i + 1}):nth-child(-n + #{10 * ($i + 1)}):hover~.content {
                 --positionY: #{$i};
             }
+            
         }
     }
 
@@ -160,10 +163,11 @@
         z-index: 1;
     }
 
+  
     .content {
         --positionX: 0;
         --positionY: 5;
-
+        z-index: 1;
         position: absolute;
         top: 0;
         right: 0;
@@ -190,7 +194,8 @@
         height: 100%;
         background-color: transparent;
         border: none;
-
+ 
+        
         span {
             color: white;
         }
@@ -204,9 +209,17 @@
         justify-content: center;
         align-items: center;
         margin-block-start: 1rem;
+
         small {
             text-decoration: underline;
             margin-inline-start: 12px;
         }
     }
 }
+.open-confirmation-cmp {
+    background: none;
+    z-index: 1000;
+    border: none;
+}
+
+
