--- a/src/assets/styles/cmps/stay-preview.scss
+++ b/src/assets/styles/cmps/stay-preview.scss
@@ -1,12 +1,34 @@
 .stay-preview {
+
     font-family: 'cereal-light';
 
+    .swiper-button-next {
+        border: 0.5px solid rgba(0, 0, 0, 0.3);
+        border-radius: 30px;
+        width: 35px;
+        height: 35px;
+        color: black;
+        background-color: rgba(255, 255, 255, 0.95);
+        opacity:50%;
+        
+    }
+
+    .swiper-button-prev {
+        border: 0.5px solid rgba(0, 0, 0, 0.3);
+        border-radius: 30px;
+        width: 35px;
+        height: 35px;
+        color: black;
+        background-color: rgba(255, 255, 255, 0.95);
+        display: none;
+    }
 
     img {
         cursor: pointer;
         border-radius: 10px;
         aspect-ratio: 1/1;
     }
+
 
     .preview-like-btn {
         stroke: #fff !important;
@@ -16,7 +38,7 @@
         position: absolute;
         z-index: 1000;
         right: 1%;
-        top:1%;
+        top: 1%;
         display: none;
     }
 
@@ -32,7 +54,7 @@
         position: absolute;
         z-index: 1;
         right: 1%;
-        top:1%;
+        top: 1%;
         display: block;
 
     }
@@ -42,7 +64,7 @@
         // background: none;
     }
 
- 
+
 
     .preview-title {
         display: flex;
@@ -67,9 +89,11 @@
 
     .preview-price {
         margin-block-start: 0.5rem;
-        p{
+
+        p {
             font-size: 0.99rem;
         }
+
         span {
             font-family: 'cereal-bold';
         }
@@ -77,31 +101,57 @@
 }
 
 .swiper {
-    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0.264);
     border-radius: 15px;
 }
 
 .swiper-slide {
-    color: #fff;
+    color: rgb(7, 3, 3);
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
 
-.swiper-button-next::after {
-    font-size: 25px;
+.swiper-button-next::after{
+    font-size: 12px;
+
+}
+
+.swiper-button-next::after:hover {
+    font-size: 12px;
+
 }
 
 .swiper-button-prev::after {
-    font-size: 25px;
+    font-size: 12px;
+    
+}
+.swiper-button-prev::after:hover {
+    font-size: 12px;
+
 }
 
-.swiper-button-next:hover {
-    font-size: 25px;
+.swiper-button-next:hover{
+    font-size: 12px;
     display: flex;
+    background-color: rgba(255, 255, 255);
+    box-shadow: rgb(0 0 0 / 16%) 0 0 6px;
+    width: 36px;
+    height: 36px;
+    transition-duration: 0.1s;
+
 }
 
 .swiper-button-prev:hover {
-    font-size: 25px;
+    opacity: 100%;
+    background-color: #ff385c;
+    font-size: 12px;
     display: flex;
+    box-shadow: rgb(0 0 0 / 16%) 0 0 6px;
+    background-color: rgba(255, 255, 255);
+    width: 36px;
+    height: 36px;
+    transition-duration: 0.1s;
+
+
 }
