fixed nights calc and header

--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -6,6 +6,7 @@
   border-bottom: 1px solid $clr-border;
   background-color: white;
   height: 80px;
+  margin-block-end: 1rem;
   .main-header {
     display: flex;
     justify-content: space-between;
