--- a/src/assets/styles/cmps/expended-header.scss
+++ b/src/assets/styles/cmps/expended-header.scss
@@ -3,16 +3,28 @@
   padding-block-start: 1rem;
   padding-block-end: 0.2rem;
   .bar {
+    // transform: translateY(-55px);
     margin: 0 auto 1rem auto;
+    border: 1px solid $clr-border;
     width: 850px;
     background: white;
-    box-shadow: 0 0 5px hsl(0 0% 78%);
     height: 65px;
     border-radius: 100vw;
     display: flex;
     justify-content: center;
     font-size: 0.7rem;
     background-color: $clr-border;
+    animation: swipe-in 0.3s;
+  }
+  @keyframes swipe-in {
+    0%{
+      width: 350px;
+      transform: translateY(-55px);
+    }
+    100%{
+      width: 850px;
+      transform: translateY(0);
+    }
   }
 
   .bar div {
@@ -114,5 +126,44 @@
 
   .bar>div:hover::before {
     background: transparent;
+  }
+}
+.locations-modal{
+  position: absolute;
+  top: 200%;
+  left: 28%;
+  width: 494px;
+  // height: 480px;
+  border-radius: 32px;
+  background-color: white;
+  border: 1px solid $clr-border;
+  z-index: 999;
+  .locations-modal-container{
+      padding: 16px 8px 50px;
+      margin: 0 auto 0 2rem;
+      width: 90%;
+      h3{margin-block-start: 1.5rem;font-size: 0.9rem;}
+      .locations-modal-map{
+        margin-block-start: 2rem;
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 12px;
+        row-gap: 30px;
+        div p{
+          font-size: 0.9rem;
+          margin-block-start: 0.2rem;
+        }
+        img{
+          border: 1px solid $clr-light-grey;
+          height: 125px;
+          border-radius: 12px;
+          cursor: pointer;
+          &:hover{
+            border-color: $clr-black;
+            transition: border-color 0.5s;
+          }
+        }
+      }
   }
 }
