--- a/src/assets/styles/cmps/stay-preview.scss
+++ b/src/assets/styles/cmps/stay-preview.scss
@@ -20,28 +20,17 @@
         display: none;
     }
 
-    .preview-like-btn:hover {
-        border: none;
-        background: none;
-    }
-
     .preview-unlike-btn {
         stroke: #fff !important;
-        stroke-width: 1 !important;
+        stroke-width: 1.5px !important;
         border: none;
         position: absolute;
         z-index: 1;
-        right: 1%;
-        top:1%;
+        right: 5%;
+        top:5%;
         display: block;
-
+        fill: rgba(0, 0, 0, 0.5);
     }
-
-    .preview-unlike-btn:hover {
-        // border: none;
-        // background: none;
-    }
-
  
 
     .preview-title {
