--- a/src/assets/styles/views/trips.scss
+++ b/src/assets/styles/views/trips.scss
@@ -8,21 +8,28 @@
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 50px;
-    li{
+
+    li {
       display: flex;
       width: 500px;
       list-style: none;
-      img{
+      img {
         width: 200px;
         height: 200px;
         border-radius: 15px;
       }
-      .trip-text-container{
+
+      .trip-text-container {
         margin-inline-start: 1rem;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-
+        .upper-section{
+          p {
+            color: $clr-grey;
+            margin-bottom: 5px;
+          }
+        }
         .bottom-section {
           display: flex;
           align-items: center;
@@ -32,19 +39,15 @@
     }
   }
 
- ul {
-  margin-bottom: 30px;
- }
+  ul {
+    margin-bottom: 30px;
+  }
+
   h3 {
     margin-bottom: 30px;
   }
 
   h4 {
-    margin-bottom: 5px;
-  }
-
-  p {
-    color: $clr-grey;
     margin-bottom: 5px;
   }
 }
