--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -35,3 +35,6 @@
 @import './cmps/reservation-confirmation.scss';
 @import './cmps/reviews.scss';
 
+// Media Query
+@import './mq/tablet.scss';
+@import './mq/mobile.scss';
