--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -11,15 +11,17 @@
     display: flex;
     justify-content: space-between;
     padding-block-start: 1.3rem;
-
     .logo {
       width: 100px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       margin-block-start: 0.2rem;
-      img {
+      :first-child {
         width: 105px;
+      }
+      :last-child {
+        display: none;
       }
     }
 
@@ -66,7 +68,6 @@
       display: flex;
       align-items: center;
       height: min-content;
-
       span {
         font-size: 0.9rem;
       }
